2002-06-07  Bruno Haible  <bruno@clisp.org>

	* intdiv0.m4: New file.
	* gettext.m4 (AM_INTL_SUBDIR): Require gt_INTDIV0.
	* Makefile.am (aclocal_DATA): Add intdiv0.m4.
	(EXTRA_DIST): Add intdiv0.m4.

2002-05-18  Bruno Haible  <bruno@clisp.org>

	Make it possible to invoke AM_ICONV after AM_GNU_GETTEXT.
	* iconv.m4 (AM_ICONV_LINKFLAGS_BODY): New macro.
	(AM_ICONV_LINK): Require it.
	(AM_ICONV): Invoke AM_ICONV_LINK. Requiring it is not sufficient,
	because gettext.m4 invokes it inside an 'if'.
	* gettext.m4 (AM_GNU_GETTEXT): Require AM_ICONV_LINKFLAGS_BODY.

2002-05-04  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Ignore non-digits in the first line of
	the output of "gcj --version". Needed for gcj 3.1.

2002-04-30  Bruno Haible  <bruno@clisp.org>

	* stdbool.m4 (gt_STDBOOL_H): If <stdbool.h> does not exist, check for
	_Bool as a builtin primitive type. Needed for cc on OSF/1 5.1.

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-08  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Don't use _nl_domain_bindings; its
	linkage name has changed between gettext 0.10.35 and 0.10.36.
	Reported by Albert Chin-A-Young <china@thewrittenword.com>.

	* lib-link.m4 (AC_LIB_LINKFLAGS_BODY): Handle -R options that appear
	in $dependency_libs, for example on HP-UX 10.20 and OSF/1.
	Reported by Albert Chin-A-Young <china@thewrittenword.com>
	and Nelson H. F. Beebe <beebe@math.utah.edu>.

	* javacomp.m4 (gt_JAVACOMP): Test whether "gcj -C" really works, to
	protect against systems where libgcj.jar is missing or misinstalled.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.1 released.

2002-03-04  Bruno Haible  <bruno@clisp.org>

	* setenv.m4 (gt_FUNC_SETENV): Also check whether unsetenv is missing.

2002-03-02  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Set LIBINTL and LTLIBINTL to empty if
	no preinstalled GNU gettext was found.
	Reported by Paul Eggert.
