@@ -1,3 +1,8 @@
+2002-06-12  Bruno Haible  <bruno@clisp.org>
+
+	* lcmessage.m4 (AM_LC_MESSAGES): Don't test ac_cv_header_locale_h here.
+	* gettext.m4 (AM_INTL_SUBDIR): Test it here.
+
 2002-06-07  Bruno Haible  <bruno@clisp.org>
 
 	* intdiv0.m4: New file.
